k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mathverse
  labels:
    app.kubernetes.io/part-of: mathverse
